@@ -1263,7 +1263,7 @@ public class CircuitManager {
 	private void applyZoom(double originX, double originY, double zoomFactor) {
 		// Zoom
 		double oldScale = simulatorWindow.getScaleFactor();
-		zoomFactor = Math.clamp(oldScale * zoomFactor, 0.25, 8);
+		zoomFactor = Math.min(Math.max(oldScale * zoomFactor, 0.25), 8); // clamp value between 0.25 and 8
 
 		simulatorWindow.setScaleFactor(zoomFactor);
 		
